--- a/pipeline.html
+++ b/pipeline.html
@@ -151,7 +151,7 @@
         <h2>Grader / Critic AI</h2>
         <p>Evaluates animations, ensures consistency, and provides feedback for corrections. Click to explore.</p>
       </div>
-      <div class="block human">
+      <div class="block human" onclick="location.href='human.html'">
         <h2>Human Review</h2>
         <p>Final quality check. Only approved animations proceed, ensuring professional results.</p>
       </div>
