--- a/pipeline.html
+++ b/pipeline.html
@@ -158,6 +158,7 @@
     </div>
 
     <button class="back-btn" onclick="location.href='index.html'">Back to Home</button>
+    <button class="back-btn" onclick="location.href='animation.html'">How it works</button>
 
   </div>
 </body>
