--- a/questions.html
+++ b/questions.html
@@ -89,58 +89,65 @@ button.back-btn:hover {
 <div class="faq-item">Why is investing in AI video generation a good idea?
   <div class="faq-answer">Because it reduces production time drastically, scales content creation, and allows creators and businesses to produce high-quality animated content faster and cheaper than traditional methods.</div>
 </div>
-<div class="faq-item">How much ROI can investors expect?</div>
-<div class="faq-answer">ROI depends on content volume and industry. With accelerated production and consistent quality, investors can see exponential returns, especially in entertainment, advertising, and e-learning sectors.</div>
+<div class="faq-item">How much ROI can investors expect?
+  <div class="faq-answer">ROI depends on content volume and industry. With accelerated production and consistent quality, investors can see exponential returns, especially in entertainment, advertising, and e-learning sectors.</div>
 </div>
-<div class="faq-item">What are the long-term benefits?</div>
-<div class="faq-answer">Long-term benefits include a scalable pipeline, lower manpower costs, faster project turnaround, and ability to adapt to new content formats quickly.</div>
+<div class="faq-item">What are the long-term benefits?
+  <div class="faq-answer">Long-term benefits include a scalable pipeline, lower manpower costs, faster project turnaround, and ability to adapt to new content formats quickly.</div>
+</div>
 </div>
 
 <div class="category">
 <h2>Cost & Resources</h2>
-<div class="faq-item">How much does training the AI model cost?</div>
-<div class="faq-answer">Initial training can cost several thousand dollars, depending on dataset size and hardware. Using cloud GPUs is an option to reduce upfront costs.</div>
+<div class="faq-item">How much does training the AI model cost?
+  <div class="faq-answer">Initial training can cost several thousand dollars, depending on dataset size and hardware. Using cloud GPUs is an option to reduce upfront costs.</div>
 </div>
-<div class="faq-item">What hardware is required?</div>
-<div class="faq-answer">High-end GPUs (8–16), 200+ GB RAM, storage for datasets, and optionally a powerful CPU for orchestration. Cloud setups like AWS, GCP, or Azure can be used.</div>
+<div class="faq-item">What hardware is required?
+  <div class="faq-answer">High-end GPUs (8–16), 200+ GB RAM, storage for datasets, and optionally a powerful CPU for orchestration. Cloud setups like AWS, GCP, or Azure can be used.</div>
 </div>
-<div class="faq-item">What software tools are needed?</div>
-<div class="faq-answer">Python, PyTorch or TensorFlow for model training, Blender or animation software for validation, Git for version control, and web frameworks for demos.</div>
+<div class="faq-item">What software tools are needed?
+  <div class="faq-answer">Python, PyTorch or TensorFlow for model training, Blender or animation software for validation, Git for version control, and web frameworks for demos.</div>
+</div>
 </div>
 
 <div class="category">
 <h2>Time & Patience</h2>
-<div class="faq-item">How long will it take to train?</div>
-<div class="faq-answer">Training a model fully can take days to weeks. Iterative improvements and fine-tuning are required for consistent results.</div>
+<div class="faq-item">How long will it take to train?
+  <div class="faq-answer">Training a model fully can take days to weeks. Iterative improvements and fine-tuning are required for consistent results.</div>
 </div>
-<div class="faq-item">How much patience is required?</div>
-<div class="faq-answer">High. Continuous iteration, testing, and refinement are key. Investors and creators must understand this is a long-term strategic project.</div>
+<div class="faq-item">How much patience is required?
+  <div class="faq-answer">High. Continuous iteration, testing, and refinement are key. Investors and creators must understand this is a long-term strategic project.</div>
+</div>
 </div>
 
 <div class="category">
 <h2>Tools & Requirements</h2>
-<div class="faq-item">Do I need 3D software?</div>
-<div class="faq-answer">Yes, for validation and integration of assets. Blender or similar software ensures AI-generated content can be animated properly.</div>
+<div class="faq-item">Do I need 3D software?
+  <div class="faq-answer">Yes, for validation and integration of assets. Blender or similar software ensures AI-generated content can be animated properly.</div>
 </div>
-<div class="faq-item">Can it run on cloud?</div>
-<div class="faq-answer">Absolutely. Cloud services offer scalable GPUs and storage but dedicated hardware provides faster iteration and more control.</div>
+<div class="faq-item">Can it run on cloud?
+  <div class="faq-answer">Absolutely. Cloud services offer scalable GPUs and storage but dedicated hardware provides faster iteration and more control.</div>
+</div>
 </div>
 
 <div class="category">
 <h2>Risks & Limitations</h2>
-<div class="faq-item">What if outputs are low-quality?</div>
-<div class="faq-answer">Grader AI and human oversight ensure feedback loops correct quality issues. Iterative improvements minimize risk.</div>
+<div class="faq-item">What if outputs are low-quality?
+  <div class="faq-answer">Grader AI and human oversight ensure feedback loops correct quality issues. Iterative improvements minimize risk.</div>
 </div>
-<div class="faq-item">Is human supervision necessary?</div>
-<div class="faq-answer">Yes. Humans verify narrative, aesthetic, and ethical aspects. AI alone cannot make all creative decisions accurately.</div>
+<div class="faq-item">Is human supervision necessary?
+  <div class="faq-answer">Yes. Humans verify narrative, aesthetic, and ethical aspects. AI alone cannot make all creative decisions accurately.</div>
 </div>
+</div>
+
 <div class="category">
 <h2>Future Scope</h2>
-<div class="faq-item">Can it scale to 3D animation?</div>
-<div class="faq-answer">Yes. The pipeline is designed to support both 2D and 3D, with flexible modules for rendering and animator AI extensions.</div>
+<div class="faq-item">Can it scale to 3D animation?
+  <div class="faq-answer">Yes. The pipeline is designed to support both 2D and 3D, with flexible modules for rendering and animator AI extensions.</div>
 </div>
-<div class="faq-item">Can the system be upgraded easily?</div>
-<div class="faq-answer">Absolutely. Modular architecture allows adding new AI models, styles, or animation techniques without overhauling the pipeline.</div>
+<div class="faq-item">Can the system be upgraded easily?
+  <div class="faq-answer">Absolutely. Modular architecture allows adding new AI models, styles, or animation techniques without overhauling the pipeline.</div>
+</div>
 </div>
 
 <button class="back-btn" onclick="location.href='index.html'">Back to Home</button>
@@ -150,7 +157,9 @@ const faqItems = document.querySelectorAll('.faq-item');
 faqItems.forEach(item => {
   item.addEventListener('click', () => {
     const answer = item.querySelector('.faq-answer');
-    answer.style.display = answer.style.display === 'block' ? 'none' : 'block';
+    if (answer) { // Check if .faq-answer exists
+      answer.style.display = answer.style.display === 'block' ? 'none' : 'block';
+    }
   });
 });
 </script>
