--- a/pipeline.html
+++ b/pipeline.html
@@ -155,9 +155,18 @@
         <h2>Human Review</h2>
         <p>Final quality check. Only approved animations proceed, ensuring professional results.</p>
       </div>
+      <br><br><br>
+      <div class="block creator" onclick="location.href='animation.html'">
+        <h2>How It Works</h2>
+        <p>A fully step by step tiled explaination on how it works.</p>
+      </div>  
+       <div class="block creator" onclick="location.href='questions.html'">
+        <h2>Any questions</h2>
+        <p>A full page deticated to some of your common questions.</p>
+      </div> 
     </div>
 
-    <button class="back-btn" onclick="location.href='animation.html'">How it works</button>
+    
     <button class="back-btn" onclick="location.href='index.html'">Back to Home</button>
     
 
