--- a/pipeline.html
+++ b/pipeline.html
@@ -155,7 +155,9 @@
         <h2>Human Review</h2>
         <p>Final quality check. Only approved animations proceed, ensuring professional results.</p>
       </div>
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+    <br><br>
+    <div class="pipeline">
       <div class="block creator" onclick="location.href='animation.html'">
         <h2>How It Works</h2>
         <p>A fully step by step tiled explaination on how it works.</p>
