--- a/index.html
+++ b/index.html
@@ -102,7 +102,13 @@
     <h1>AI Video Generation</h1>
     <p>Experience the future of content creation with our specialized AI pipeline. Fast, consistent, and creative, this platform allows even small creators to make movies without the cost of large studios. </p>
     <button onclick="location.href='pipeline.html'">Get Started</button>
+    <button onclick="redirectToWebsite()">Visit Repository</button>
   </div>
-
+<script>
+        function redirectToWebsite() {
+            // Change the current location to the desired URL
+            window.location.href = "https://github.com/Arphd4/AI-2D-Generation-Idea";
+        }
+</script>
 </body>
 </html>
